--- a/small_tag.html
+++ b/small_tag.html
@@ -5,7 +5,7 @@
     <body>
         <h1><b><u>Small Formatting</u></b></h1>
         <p>This is normal text</p>
-        <p>HTML <small>small</small> formatting</p>
+        <p>HTML <small>'small'</small> formatting</p>
         <p>Thank You</p>
     </body>
 </html>
