--- a/big_formatting.html
+++ b/big_formatting.html
@@ -5,7 +5,7 @@
     <body>
         <h1><b>HTML BIG FORMATTING.</b></h1>
         <p>This is Normal 'Big'</p>
-        <p>This is <big>Big</big> HTML formatting.</p>
+        <p>This is <u><big>'Big'</big></u> HTML formatting.</p>
         <p>Thank You!</p>
     </body>
 </html>
