--- a/Hperlink.html
+++ b/Hperlink.html
@@ -8,7 +8,7 @@
         <h1 align = center>
             Hyper Links
         </h1>
-        <p><a href="https://www.youtube.com/@supravasingh">
+        <p><a href="https://www.youtube.com/@supravasingh" target="_blank">
             My Channel
         </p></a>
         <pre>
