--- a/My Resume.html
+++ b/My Resume.html
@@ -42,7 +42,8 @@ You Can See All My Projects of HTML.
 22. <a href="Subscript_and_superscript.html" target="_blank">Sub and Sup Tag</a>
 <a href="https://scratch.mit.edu/projects/771737166/" target="_blank">Try This Out!</a>
 Thank You!
-Пока!Пока! means Bye! Bye! Paka! Paka!
+Пока!Пока!  Bye Bye!!
+Paka Paka!!s
             </font></pre>
         </p>
     </body>
