--- a/My Resume.html
+++ b/My Resume.html
@@ -43,7 +43,7 @@ You Can See All My Projects of HTML.
 <a href="https://scratch.mit.edu/projects/771737166/" target="_blank">Try This Out!</a>
 Thank You!
 Пока!Пока!  Bye Bye!!
-Paka Paka!!s
+Paka Paka!!
             </font></pre>
         </p>
     </body>
