--- a/List Tag(odered).htm
+++ b/List Tag(odered).htm
@@ -8,7 +8,7 @@
         <h1>
             ODERED LIST
         </h1>
-        <ol>
+        <ol type="A">
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
