--- a/Website/Homepage.html
+++ b/Website/Homepage.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body style="background-color: aqua;">
-        <h3 style="background-color: #bbeeee; font-family: Verdana;">Home | About | Contact Us | Courses</h3>
+        <h3 style="background-color: #bbeeee; font-family: Verdana;"><a href="Homepage.html">Home</a> | <a href="Aboutus.html">About</a> | <a href="Contact.html">Contact Us</a> | <a href="Courses.html">Courses</a></h3>
         <h1><center>Akstudies</center></h1>
         <center><img src="Akstudies.png" height="400" width="700"></center>
         <hr>
